--- a/main.css
+++ b/main.css
@@ -1,3 +1,18 @@
 body {
     background-color: #34A853;
 }
+
+.well {
+    margin: 5vh;
+}
+
+img {
+    max-width: 15vw;
+    max-height: 15vw;
+}
+
+.status,
+.description,
+.StreamName {
+    display: inline;
+}
